--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,60 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings: "wdth" 100;
+    margin: 0;
+    padding: 0;
 }
+.container{
+  display: flex;
+  flex-direction: row;
+}
+.menu-navegacao{
+  background-color: rgb(41, 41, 41);
+  color: whitesmoke;
+  width: 20%;
+  height: 100%;
+  align-items: center;
+  position: fixed;
+  & > nav{
+    padding: 0;
+    width: 100%;
+    & > img{
+      width: 100%;
+    }
+  }
+}
+.lista-menu-navegacao{
+  width: 80%;
+  padding: .5rem;
+ /*  border: 1px solid black; */
+  margin: auto;
+}
+.item-menu-navegacao{
+  margin-top: .8rem;
+  list-style: none;
+  padding-left: .5rem;
+  width: auto;
+  font-size: 1.4;
+  border-bottom: solid .1rem rgb(60, 106, 240);
+  height: auto;
+  & > i{
+    padding-right: .5rem;
+  }
+  & > a{ 
+    color: whitesmoke;
+  }
+}
+
+.item-menu-navegacao:hover{
+  background-color: rgb(29, 29, 29);
+  transition: .5s;
+  & > a:hover{
+    color:  #a1a1a1;
+    transition: .2s;
+  }
+}
+li a{
+  text-decoration: none;
+}
+
